# StringMatch

./: .gitignore  CMakeLists-clang.txt  CMakeLists.txt  README.md  StringMatch.sln
clang/: CMakeLists.txt  cmake-cmd.txt  cmd.txt
cmake/: detect_cpu_architectures.cmake
include/support/: StopWatch.h
projects/vc2015/main/: StringMatch.vcxproj  StringMatch.vcxproj.filters
src/main/: AlgorithmWrapper.h  Apply.h  BasicAlgorithm.h  BoyerMoore.h  Kmp.h  ShiftOr.h  StdSearch.h  StrStr.h  StringMatch.cpp  StringMatch.h  StringRef.h  forward_iterator.h  iterator.h  main.cpp  standard_iterator.h  string_iterator.h
src/main/algorithm/: AhoCorasick.h  AlgorithmUtils.h  AlgorithmWrapper.h  BMTuned.h  BoyerMoore.h  FastStrStr.h  GlibcStrStr.h  GlibcStrStrOld.h  Horspool.h  Kmp.h  Kmp2.h  KmpStd.h  MemMem.h  MyMemMem.h  MyMemMemBw.h  MyStrStr.h  QuickSearch.h  Rabin-Karp.h  SSEHelper.h  SSEStrStr.h  SSEStrStr2.h  SSEStrStrA.h  SSEStrStrA_v0.h  SSEStrStrA_v2.h  SSEStrStr_inl.h  ShiftAnd.h  ShiftOr.h  StdBoyerMoore.h  StdSearch.h  StrStr.h  Sunday.h  Volnitsky.h  WordHash.h
src/main/asm/: asmlib.h  instrset_x64.asm  instrset_x86.asm  strstr_see42_v0_x64.asm  strstr_see42_v2_x64.asm  strstr_see42_x64.asm  strstr_sse42_x86.asm
src/main/basic/: complier.h  inttypes.h  stddef.h  stdint.h  stdsize.h
src/main/basic/msvc/: inttypes.h
src/main/jstd/: Apply.h  char_traits.h  forward_iterator.h  scoped_ptr.h  vector.h
src/main/support/: StopWatch.h  StringRef.h  bitscan_forward.h  bitscan_reverse.h  popcnt.h
